# EmbeddedSystemDesign

./: CMakeLists.txt  README.md
demo/: demo.cpp  port_demo.cpp
embedded_design/: embedded_design.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
port/include/: usb_port.h
port/src/: usb_port.cpp
test/: test  test.cpp
vision/include/: vision_model.h
vision/src/: vision_model.cpp
